--- a/frontend/src/component/layout/Header/Header.css
+++ b/frontend/src/component/layout/Header/Header.css
@@ -9,3 +9,28 @@
     height: 56px;
     border-radius: 100%;
 }
+
+.active span{
+    background-color: yellowgreen;
+    z-index: -100;
+}
+
+.link span {
+    background-color: white;
+    z-index: -100;
+}
+
+.menuBurgerItem{
+    height: 0.15vmax;
+    width: 2vmax;
+}
+
+.menuBurger{
+    width: 3.2vmax;
+    height: 1.5vmax;
+    top: 0.5vmax;
+    left: 1vmax;
+}
+ 
+
+ 
