--- a/frontend/src/component/layout/Footer/Footer.css
+++ b/frontend/src/component/layout/Footer/Footer.css
@@ -6,7 +6,14 @@ footer {
     display: flex;
     align-items: center;
 }
+/* .footers {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+} */
 
+ 
 .leftFooter {
     width: 20%;
     display: flex;
