--- a/frontend/src/component/Home/Home.css
+++ b/frontend/src/component/Home/Home.css
@@ -1,19 +1,19 @@
 .banner{
     /* background-image:  linear-gradient(to right, #635dc0, #3027ae); */
-    /* background-image: url("https://i.postimg.cc/bNdt4nmF/fotor-ai-2024060802121.jpg"); */
-    background-image: url("https://i.postimg.cc/Xvx2QFH7/Designer-2.jpg");
+   
+    /* background-image: url("https://i.postimg.cc/Xvx2QFH7/Designer-2.jpg"); */
+    background-image: url("https://i.postimg.cc/nhQ0vMjM/fotor-ai-2024060802121.jpg");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
     height: 100vmin;
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: center;
     justify-content: center;
-    color: white;
-    /* color: black; */
-    font-weight:600 ;
+    color: black;
+    font-weight:2800 ;
 }
 
 .banner > h1{
@@ -133,6 +133,11 @@
 }
 
 @media screen and (max-width: 600px){
+
+    .banner{
+        background-image: url("https://i.postimg.cc/Xvx2QFH7/Designer-2.jpg");
+          color: transparent;
+    }
     .productCard > p {
         font-size: 1.7vmax;
     }
